# buckshock-roulette

./: .gitignore  CMakeLists.txt  README.md  build.sh
include/: debug.h  game.h  input.h  mcp23008.h  output.h  util.h
res/: pinout.xcf  shotgun.FCStd
res/individual parts/: shotgun-bodyejection port cover.stl  shotgun-bodyslice one minus stock insert.stl  shotgun-bodyslice two minus stock insert.stl  shotgun-bodystock.stl  shotgun-handle plus trigger.stl  shotgun-pipe binding 1.stl  shotgun-pipe binding 2 .stl  shotgun-pipe coversbottom pipe cover.stl  shotgun-pipe coverstop pipe cover with bore.stl  shotgun-pump.stl
src/: debug.c  game.c  input.c  main.c  mcp23008.c  output.c  util.c
